# research-agent

./: .gitignore  LICENSE  main.py  pyproject.toml
src/agents/: copywriter.py  researcher.py  supervisor.py  supervisor_v1.py
src/core/: logs.py  settings.py
src/graph/: builder.py  checkpointer.py  state.py
src/models/: copywriter_schema.py  researcher_schema.py  supervisor_schema.py
src/prompts/: supervisor.md
src/services/: llm_service.py
src/services/llm_service/: base.py  claude.py  factory.py  gemini.py  nvidia.py  openai.py
src/tools/copywriter_tools/: generate_blog_post.py  generate_linkedin_post.py  review_research_tool.py
src/tools/researcher_tools/: extract_content.py  generate_report.py  search_web.py
src/tools/supervisor_tools/: copywriter_tool.py  researcher_tool.py
src/utils/: export_workflow.py  load_creds.py  load_file.py  load_prompt.py
