[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "google-auth>=2.55.0",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-tavily>=0.2.18",
    "pydantic-settings>=2.14.2",
]
