[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "google-auth>=2.55.0",
    "langchain-anthropic>=1.4.8",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pydantic-settings>=2.14.2",
]
